--- a/Basic_Programming_Concepts.ipynb
+++ b/Basic_Programming_Concepts.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Basic Programming Concepts.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNUmWkkZ/NAH4k9f1333CKf",
+      "authorship_tag": "ABX9TyN/pnxfpwVP0dZ0uL7n0H4d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,9 +73,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Th7zHYXCD9jW",
-        "outputId": "c81391ae-2779-4caf-b93e-eb43dd55a387"
+        "outputId": "5c127881-3030-4cdb-9bd5-f3860c3c8ac2"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,9 +96,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_2iWDs43Gbrm",
-        "outputId": "6cfd7536-d20d-4de6-bbf4-75c2d31188d9"
+        "outputId": "b1ebc530-7719-437f-a0f4-0578548c70c1"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -108,7 +108,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 2
         }
       ]
     },
@@ -146,7 +146,7 @@
       "metadata": {
         "id": "tbLdoh2VGxdj"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -168,7 +168,7 @@
       "metadata": {
         "id": "k9d5TIZ1Iij2"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -183,9 +183,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dBZW_LITI7NC",
-        "outputId": "78cb7c49-ab49-4a6d-e077-5172973c992a"
+        "outputId": "90191a48-ac2f-4e9d-c63c-d3377ba31cf0"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,19 +213,19 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 132
+          "height": 130
         },
         "id": "DsPnHlxkJYfE",
-        "outputId": "d87c0c1d-5842-4117-e163-0b777a3a8700"
+        "outputId": "aacd1425-223c-4cb4-aa05-fbfc4cbca19c"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "error",
           "ename": "SyntaxError",
           "evalue": "ignored",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-07a0750214a8>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def function_a():\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-07a0750214a8>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def function_a():\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
           ]
         }
       ]
@@ -248,7 +248,7 @@
       "metadata": {
         "id": "MnzI7kNyJqxM"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -261,9 +261,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gi9DPS5rKb5L",
-        "outputId": "4a865c2e-2875-41dd-ed87-c3793f44c6fb"
+        "outputId": "54ebca3c-023f-47d8-ceed-4e90d2544be7"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -284,9 +284,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yFnJ7qF5Ov4u",
-        "outputId": "8b7b4ff8-dabe-49cb-aed5-edc771cf3e97"
+        "outputId": "e8df5a88-b959-454c-a3af-dc1cac286022"
       },
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,7 +305,7 @@
       "metadata": {
         "id": "WTakIkthOTpR"
       },
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -330,9 +330,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qDgqwmaMPT4O",
-        "outputId": "da2981da-7743-4bd2-ce3f-81f013e7326c"
+        "outputId": "32a56e4f-c777-45e8-d0fd-49b0e467871a"
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,9 +355,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lQEJDlAkPgjW",
-        "outputId": "540c708e-9bb6-4043-fd49-148d6ae46405"
+        "outputId": "d812f392-8f8f-4ff1-8e7c-83b0e87c3d3b"
       },
-      "execution_count": 14,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -378,9 +378,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AMvM1QycPpb3",
-        "outputId": "32cb5c7e-512c-4163-9a60-cfbaf5697da1"
+        "outputId": "6425850a-adff-4a19-8f6e-07164449fea5"
       },
-      "execution_count": 15,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -401,9 +401,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E_mGC6iAQBPF",
-        "outputId": "9e9be73e-acc9-4ecc-9b41-9e8118139ab7"
+        "outputId": "5eaa7c0b-8aff-477e-a4ff-def8c91647a2"
       },
-      "execution_count": 16,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -442,7 +442,7 @@
       "metadata": {
         "id": "ygU4MSqbO1aU"
       },
-      "execution_count": 17,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -455,9 +455,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JlcXZyMvRVQs",
-        "outputId": "fda9a22a-3f0a-46f3-b6fb-6610af904ece"
+        "outputId": "76332665-a01d-4ffb-d6bb-4f0a5459b07b"
       },
-      "execution_count": 18,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -479,9 +479,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mhpcGajzRrqT",
-        "outputId": "3f7eca23-ce45-4f69-c2a4-fb3b12f8c4e0"
+        "outputId": "8ed74629-86b5-4874-a36f-98e2459cb123"
       },
-      "execution_count": 19,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,9 +503,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u3QHMqUaRw3U",
-        "outputId": "2a177edc-c746-40f6-f00c-23f67a28624d"
+        "outputId": "21a744b2-209b-4b12-8c20-53c207662eaa"
       },
-      "execution_count": 20,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -549,9 +549,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xH-ukr_xS8Wb",
-        "outputId": "9443d51a-eb49-486a-b1bb-53fd2354b2b8"
+        "outputId": "596ae7ec-69e7-4746-eccb-8e976540412a"
       },
-      "execution_count": 22,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -576,7 +576,7 @@
       "metadata": {
         "id": "9e2IXhK_UeKZ"
       },
-      "execution_count": 24,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -591,9 +591,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SvOzwJ50U0jp",
-        "outputId": "3d56cd3a-9e3a-4404-8a18-f74bda69a6cd"
+        "outputId": "e0865ca8-35e9-4d50-ed79-e895d372184b"
       },
-      "execution_count": 25,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -618,7 +618,7 @@
       "metadata": {
         "id": "I0bgdkWuV_Jo"
       },
-      "execution_count": 27,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -636,9 +636,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "frwIvl8sXBRL",
-        "outputId": "5d148196-1c43-40c0-f424-13d01a572d80"
+        "outputId": "afde11ff-c1ea-43d2-9a42-c798e9712cc4"
       },
-      "execution_count": 30,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -680,7 +680,7 @@
       "metadata": {
         "id": "dimyhUjEYOYj"
       },
-      "execution_count": 32,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -693,9 +693,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gHkcvlshZJ0U",
-        "outputId": "767b9bea-e192-4c33-eaa3-29da45184f7e"
+        "outputId": "2abf44d6-4ea7-4435-bc6f-7af3e4b89cd7"
       },
-      "execution_count": 33,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -705,7 +705,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 25
         }
       ]
     },
@@ -729,9 +729,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OZ92-8PGbM46",
-        "outputId": "2483f11b-c8a0-4ff3-d001-31e70fed6e61"
+        "outputId": "aa87af54-0004-4568-a688-df5e79c125ad"
       },
-      "execution_count": 36,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -765,9 +765,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AQS5FEPScNam",
-        "outputId": "5ccb8b3d-a3c7-4e3b-808b-78ca00afcffc"
+        "outputId": "65d81987-bb80-4152-e6ab-2fe782e5e7f7"
       },
-      "execution_count": 39,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -838,7 +838,7 @@
       "metadata": {
         "id": "i2R02QqVfxXO"
       },
-      "execution_count": 40,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -851,9 +851,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lsZrgjw0gd0t",
-        "outputId": "29104290-4f08-4455-a9c0-734f4a9f9439"
+        "outputId": "21b9268e-8e4d-4fc7-dc83-569b45693b36"
       },
-      "execution_count": 41,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -893,13 +893,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 30,
       "metadata": {
         "id": "1iA_qomUDXui",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fbaec499-660c-4758-e196-cc813fafcd20"
+        "outputId": "e62e9b0d-0ad9-49e5-aee1-561bfa3802c0"
       },
       "outputs": [
         {
@@ -942,9 +942,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HuRxfUoxjyix",
-        "outputId": "95901e86-3ac8-40a2-c616-4c1dfdc41c9b"
+        "outputId": "6fa4fcd7-fbde-46ff-fc19-61e3dabf86c6"
       },
-      "execution_count": 46,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -966,9 +966,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HEeh-q0qkNBK",
-        "outputId": "4088e034-1b96-4e46-f09d-0a2d6f45fbf3"
+        "outputId": "e55ac9cf-6103-4bf1-846a-d04fe90d8cac"
       },
-      "execution_count": 47,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -988,7 +988,7 @@
       "metadata": {
         "id": "StE5C80UkbtJ"
       },
-      "execution_count": 48,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -1002,9 +1002,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IYAVLdM7kjEx",
-        "outputId": "7c450a87-f391-4369-8e98-7aad351aa0f3"
+        "outputId": "cb3368ef-6cad-47b8-917f-faca27e5ff9b"
       },
-      "execution_count": 49,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -1024,7 +1024,7 @@
       "metadata": {
         "id": "LKkUOQ9pk49k"
       },
-      "execution_count": 52,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -1038,9 +1038,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9JCbY_xMk9uh",
-        "outputId": "32862a74-9177-4587-b29d-f5a4dae6cd7e"
+        "outputId": "59d5aa5b-bcd9-46b5-d59d-ad40601d32c3"
       },
-      "execution_count": 53,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -1054,14 +1054,92 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## HW\n",
-        "เขียน function ตัดเกรด โดยที่ input เป็นคะแนน (0-100) , output เป็นเกรด (F-A) หรือ ไม่สามารถตัดเกรดได้\n",
+        "# HW\n",
+        "เขียน function ตัดเกรด โดยที่ input เป็นคะแนน(0-100) , output เป็นเกรด (F-A) หรือ 'ไม่สามารถตัดเกรดได้'\n",
         "\n",
-        "วนลูปตัดเกรด input = [1,50,65,90,101,-5,49, 'ก' ,80]"
+        "วนลูปตัดเกรด input = [1,50,65,90,101,-5,49,'ก',80]\n",
+        "\n",
+        "กำหนด\n",
+        "\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ  0  แต่น้อยกว่า 50 จะได้เกรด F\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 50 แต่น้อยกว่า 55 จะได้เกรด D\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 55 แต่น้อยกว่า 60 จะได้เกรด D+\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 60 แต่น้อยกว่า 65 จะได้เกรด C\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 65 แต่น้อยกว่า 70 จะได้เกรด C+\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 70 แต่น้อยกว่า 75 จะได้เกรด B\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 75 แต่น้อยกว่า 80 จะได้เกรด B+\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 80  จะได้เกรด A\n",
+        "*  ถ้าคะแนนไม่อยู่ในช่วง 0-100 ให้ return 'ไม่สามารถตัดเกรดได้'"
       ],
       "metadata": {
-        "id": "4ujvagwBlUeS"
+        "id": "jgF2Urtylpqu"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input = [1,50,65,90,101,-5,49,'ก',80]"
+      ],
+      "metadata": {
+        "id": "ZsmFY6S7lGZR"
+      },
+      "execution_count": 61,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in input:\n",
+        "    if type(i) == type(''):\n",
+        "            print (f'คะแนน เท่ากับ {i} ไม่สามารถตัดเกรดได้')\n",
+        "    else:\n",
+        "        if i >=101:\n",
+        "            print (f'คะแนน เท่ากับ {i} ไม่สามารถตัดเกรดได้')\n",
+        "        elif i >=80:\n",
+        "            print(f'คะเเนน เท่ากับ  {i} ได้เกรด A')\n",
+        "        elif i>=75:\n",
+        "            print(f'คะเเนน เท่ากับ  {i} ได้เกรด B+')\n",
+        "        elif i>=70:\n",
+        "            print(f'คะเเนน เท่ากับ  {i} ได้เกรด B')\n",
+        "        elif i>=65:\n",
+        "            print(f'คะเเนน เท่ากับ  {i} ได้เกรด C+')\n",
+        "        elif i>=60:\n",
+        "            print(f'คะเเนน เท่ากับ  {i} ได้เกรด C')\n",
+        "        elif i>=55:\n",
+        "            print(f'คะเเนน เท่ากับ  {i} ได้เกรด D+')\n",
+        "        elif i>=50:\n",
+        "            print(f'คะเเนน เท่ากับ  {i} ได้เกรด D')\n",
+        "        elif i>=0:\n",
+        "            print(f'คะเเนน เท่ากับ  {i} ได้เกรด F')\n",
+        "        else:\n",
+        "            print(f'คะเเนน เท่ากับ  {i} ไม่สามารถตัดเกรดได้')\n",
+        "    "
+      ],
+      "metadata": {
+        "id": "kUFO_CXWcem8",
+        "outputId": "bfa89699-1b9a-4c50-e599-3766c3a265db",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "คะเเนน เท่ากับ  1 ได้เกรด F\n",
+            "คะเเนน เท่ากับ  50 ได้เกรด D\n",
+            "คะเเนน เท่ากับ  65 ได้เกรด C+\n",
+            "คะเเนน เท่ากับ  90 ได้เกรด A\n",
+            "คะแนน เท่ากับ 101 ไม่สามารถตัดเกรดได้\n",
+            "คะเเนน เท่ากับ  -5 ไม่สามารถตัดเกรดได้\n",
+            "คะเเนน เท่ากับ  49 ได้เกรด F\n",
+            "คะแนน เท่ากับ ก ไม่สามารถตัดเกรดได้\n",
+            "คะเเนน เท่ากับ  80 ได้เกรด A\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1069,7 +1147,7 @@
         ""
       ],
       "metadata": {
-        "id": "ZsmFY6S7lGZR"
+        "id": "1YAxnY3hepEm"
       },
       "execution_count": null,
       "outputs": []
