--- a/Basic_Programming_Concepts.ipynb
+++ b/Basic_Programming_Concepts.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Basic Programming Concepts.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN/pnxfpwVP0dZ0uL7n0H4d",
+      "authorship_tag": "ABX9TyM7Xa0VCVXQYBpRG+R346Y0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,7 +73,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Th7zHYXCD9jW",
-        "outputId": "5c127881-3030-4cdb-9bd5-f3860c3c8ac2"
+        "outputId": "f9382da5-777f-4b8f-a51a-6bfbad754a43"
       },
       "execution_count": 1,
       "outputs": [
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_2iWDs43Gbrm",
-        "outputId": "b1ebc530-7719-437f-a0f4-0578548c70c1"
+        "outputId": "b8a457fe-e119-468c-da78-91dd4becce0a"
       },
       "execution_count": 2,
       "outputs": [
@@ -183,7 +183,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dBZW_LITI7NC",
-        "outputId": "90191a48-ac2f-4e9d-c63c-d3377ba31cf0"
+        "outputId": "b9201351-0fc1-408b-a6fe-5452fce03846"
       },
       "execution_count": 5,
       "outputs": [
@@ -218,7 +218,7 @@
         "id": "DsPnHlxkJYfE",
         "outputId": "aacd1425-223c-4cb4-aa05-fbfc4cbca19c"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -248,7 +248,7 @@
       "metadata": {
         "id": "MnzI7kNyJqxM"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -261,9 +261,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gi9DPS5rKb5L",
-        "outputId": "54ebca3c-023f-47d8-ceed-4e90d2544be7"
+        "outputId": "54db40d5-82da-40fe-b5e9-44dc837af10e"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -284,9 +284,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yFnJ7qF5Ov4u",
-        "outputId": "e8df5a88-b959-454c-a3af-dc1cac286022"
+        "outputId": "48c2f8d7-448b-4317-8489-da8c6058e6ed"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,7 +305,7 @@
       "metadata": {
         "id": "WTakIkthOTpR"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -330,9 +330,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qDgqwmaMPT4O",
-        "outputId": "32a56e4f-c777-45e8-d0fd-49b0e467871a"
+        "outputId": "c570a209-9a2d-4f4d-d728-4494f407faab"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,9 +355,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lQEJDlAkPgjW",
-        "outputId": "d812f392-8f8f-4ff1-8e7c-83b0e87c3d3b"
+        "outputId": "58ec7d2a-0f0b-458f-e985-78a2a7aee3c7"
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -378,9 +378,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AMvM1QycPpb3",
-        "outputId": "6425850a-adff-4a19-8f6e-07164449fea5"
+        "outputId": "592ecdd1-982d-4b3c-8ed5-5931723b3ac5"
       },
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -401,9 +401,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E_mGC6iAQBPF",
-        "outputId": "5eaa7c0b-8aff-477e-a4ff-def8c91647a2"
+        "outputId": "0d79e274-7f4e-4126-ad5c-c19dadc1e013"
       },
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -442,7 +442,7 @@
       "metadata": {
         "id": "ygU4MSqbO1aU"
       },
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -455,9 +455,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JlcXZyMvRVQs",
-        "outputId": "76332665-a01d-4ffb-d6bb-4f0a5459b07b"
+        "outputId": "78ddeb37-7c5e-44fa-d5c7-cf1f02a4f697"
       },
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -479,9 +479,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mhpcGajzRrqT",
-        "outputId": "8ed74629-86b5-4874-a36f-98e2459cb123"
+        "outputId": "cb3a64e1-9fc8-4084-dcde-5cef20a43b7c"
       },
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,9 +503,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u3QHMqUaRw3U",
-        "outputId": "21a744b2-209b-4b12-8c20-53c207662eaa"
+        "outputId": "7a63974d-9690-4e5b-97e1-d9bd065484dd"
       },
-      "execution_count": 18,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -549,9 +549,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xH-ukr_xS8Wb",
-        "outputId": "596ae7ec-69e7-4746-eccb-8e976540412a"
+        "outputId": "e2e4a772-43b5-497e-e1a9-2dc7fd3df8f3"
       },
-      "execution_count": 19,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -576,7 +576,7 @@
       "metadata": {
         "id": "9e2IXhK_UeKZ"
       },
-      "execution_count": 20,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -591,9 +591,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SvOzwJ50U0jp",
-        "outputId": "e0865ca8-35e9-4d50-ed79-e895d372184b"
+        "outputId": "5a142ba7-6298-4ab4-b027-b6320277a0b8"
       },
-      "execution_count": 21,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -618,7 +618,7 @@
       "metadata": {
         "id": "I0bgdkWuV_Jo"
       },
-      "execution_count": 22,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -636,9 +636,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "frwIvl8sXBRL",
-        "outputId": "afde11ff-c1ea-43d2-9a42-c798e9712cc4"
+        "outputId": "b73ca8cb-0c84-4d67-e83a-0e79392da89f"
       },
-      "execution_count": 23,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -680,7 +680,7 @@
       "metadata": {
         "id": "dimyhUjEYOYj"
       },
-      "execution_count": 24,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -693,9 +693,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gHkcvlshZJ0U",
-        "outputId": "2abf44d6-4ea7-4435-bc6f-7af3e4b89cd7"
+        "outputId": "4add399e-df3d-417c-ff28-c2b6ad90d740"
       },
-      "execution_count": 25,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -705,7 +705,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 24
         }
       ]
     },
@@ -729,9 +729,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OZ92-8PGbM46",
-        "outputId": "aa87af54-0004-4568-a688-df5e79c125ad"
+        "outputId": "a7168fd0-ed5b-4884-d770-262c41779ed0"
       },
-      "execution_count": 26,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -765,9 +765,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AQS5FEPScNam",
-        "outputId": "65d81987-bb80-4152-e6ab-2fe782e5e7f7"
+        "outputId": "a0300ebf-8e83-4b06-ad02-0c86da821312"
       },
-      "execution_count": 27,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -838,7 +838,7 @@
       "metadata": {
         "id": "i2R02QqVfxXO"
       },
-      "execution_count": 28,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -851,9 +851,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lsZrgjw0gd0t",
-        "outputId": "21b9268e-8e4d-4fc7-dc83-569b45693b36"
+        "outputId": "30afc659-26c8-46cd-902c-b8975227206b"
       },
-      "execution_count": 29,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -893,13 +893,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 29,
       "metadata": {
         "id": "1iA_qomUDXui",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e62e9b0d-0ad9-49e5-aee1-561bfa3802c0"
+        "outputId": "a00e6a91-a653-49f9-e0eb-9cfe8723db3d"
       },
       "outputs": [
         {
@@ -942,9 +942,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HuRxfUoxjyix",
-        "outputId": "6fa4fcd7-fbde-46ff-fc19-61e3dabf86c6"
+        "outputId": "743f7f2f-b09f-4639-e898-a5348a90912f"
       },
-      "execution_count": 31,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -966,9 +966,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HEeh-q0qkNBK",
-        "outputId": "e55ac9cf-6103-4bf1-846a-d04fe90d8cac"
+        "outputId": "f12bad32-9a44-408f-c86c-5b9513e9bed0"
       },
-      "execution_count": 32,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -988,7 +988,7 @@
       "metadata": {
         "id": "StE5C80UkbtJ"
       },
-      "execution_count": 33,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -1002,9 +1002,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IYAVLdM7kjEx",
-        "outputId": "cb3368ef-6cad-47b8-917f-faca27e5ff9b"
+        "outputId": "19e22b98-a212-43e6-87fb-dbab525e8b8a"
       },
-      "execution_count": 34,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -1024,7 +1024,7 @@
       "metadata": {
         "id": "LKkUOQ9pk49k"
       },
-      "execution_count": 35,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -1038,9 +1038,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9JCbY_xMk9uh",
-        "outputId": "59d5aa5b-bcd9-46b5-d59d-ad40601d32c3"
+        "outputId": "1434bc00-4797-4a59-c17f-99daff3a8373"
       },
-      "execution_count": 36,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -1083,7 +1083,7 @@
       "metadata": {
         "id": "ZsmFY6S7lGZR"
       },
-      "execution_count": 61,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -1117,12 +1117,12 @@
       ],
       "metadata": {
         "id": "kUFO_CXWcem8",
-        "outputId": "bfa89699-1b9a-4c50-e599-3766c3a265db",
+        "outputId": "21bdcc83-d7e0-4b97-8880-cfeda492b061",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 63,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -1142,12 +1142,87 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "แก้การบ้าน"
+      ],
+      "metadata": {
+        "id": "Coqh0gdU-w-x"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        ""
+        "input = [1,50,65,90,101,-5,49,'ก',80]"
       ],
       "metadata": {
         "id": "1YAxnY3hepEm"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'n' is not int()  # เช็คชนิดของตัวแปร"
+      ],
+      "metadata": {
+        "id": "4qCgs2QB_vxD",
+        "outputId": "79d4c608-11af-4a89-d335-d82b624f2b98",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type('')"
+      ],
+      "metadata": {
+        "id": "H46lqlDRAE7R",
+        "outputId": "2161f425-73c1-40f9-d532-f2b745c771f1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def grading(X):   #function\n",
+        "    if X is int():  #ถ้าเป็น int จะทำ\n",
+        "\n",
+        "    \n"
+      ],
+      "metadata": {
+        "id": "D3kIbLCz_dy2"
       },
       "execution_count": null,
       "outputs": []
