Quiz 1 เหลือข้อ 3 ตรง sum

--- a/Pandas101.ipynb
+++ b/Pandas101.ipynb
@@ -1963,11 +1963,11 @@
         "data_covid['province_of_onset']"
       ],
       "metadata": {
-        "id": "sxiAl33fWdwk",
-        "outputId": "f463bca0-289f-416f-a2be-44ac9dc6b133",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sxiAl33fWdwk",
+        "outputId": "f463bca0-289f-416f-a2be-44ac9dc6b133"
       },
       "execution_count": 17,
       "outputs": [
@@ -2377,12 +2377,12 @@
         "data_covid[data_covid['age']>=70]  #สนใจคนที่อายุมากกว่าหรือเท่ากับ 70"
       ],
       "metadata": {
-        "id": "EEyG6xIQYF8l",
-        "outputId": "c1691165-1648-474b-f6b0-a4c4d27b8b9f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 990
-        }
+        },
+        "id": "EEyG6xIQYF8l",
+        "outputId": "c1691165-1648-474b-f6b0-a4c4d27b8b9f"
       },
       "execution_count": 23,
       "outputs": [
@@ -3302,11 +3302,11 @@
         "eight_rows_covid['district_of_onset'].isnull()  #9รงไหนค่าว่างจะเป็น True"
       ],
       "metadata": {
-        "id": "V6XcXmFUayLd",
-        "outputId": "e615c115-78cd-40a2-e9d7-05be5de3a1e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "V6XcXmFUayLd",
+        "outputId": "e615c115-78cd-40a2-e9d7-05be5de3a1e1"
       },
       "execution_count": 30,
       "outputs": [
@@ -3683,17 +3683,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "KcXlEnNmgIjN"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3762,6 +3751,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "ข้อ 2 คำนวณ อายุเฉลี่ย ของผู้ชาย ในจังหวัดขอนแก่น"
+      ],
+      "metadata": {
+        "id": "rMXHYanxg-Zh"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -3790,6 +3788,117 @@
           "name": "stdout",
           "text": [
             "อายุเฉลี่ย ของ ผู้ป่วยชาย ในจังหวัดขอนแก่น 26.571428571428573\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ข้อ 3"
+      ],
+      "metadata": {
+        "id": "mVBrZN8nivse"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_covid['nationality']"
+      ],
+      "metadata": {
+        "id": "ewgHbtTfix1I",
+        "outputId": "60db99cf-95e1-49d7-a61a-3999d1016c5f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0           China\n",
+              "1           China\n",
+              "2        Thailand\n",
+              "3           China\n",
+              "4           China\n",
+              "           ...   \n",
+              "12648    Thailand\n",
+              "12649    Thailand\n",
+              "12650    Thailand\n",
+              "12651    Thailand\n",
+              "12652       Burma\n",
+              "Name: nationality, Length: 12653, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_covid['nationality']=='Thailand'"
+      ],
+      "metadata": {
+        "id": "uepenz1vi-kb",
+        "outputId": "68ca2426-9c1d-47ac-850b-7d7217bbcbb3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0        False\n",
+              "1        False\n",
+              "2         True\n",
+              "3        False\n",
+              "4        False\n",
+              "         ...  \n",
+              "12648     True\n",
+              "12649     True\n",
+              "12650     True\n",
+              "12651     True\n",
+              "12652    False\n",
+              "Name: nationality, Length: 12653, dtype: bool"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum data_covid['nationality']=='Thailand'"
+      ],
+      "metadata": {
+        "id": "5mwmU5x8jbRo",
+        "outputId": "85fdad4d-e310-401b-f3eb-229e7ac2ecac",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 166
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-50-c11504e3ec50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msum\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mdata_covid\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'nationality'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m'Thailand'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'float' object is not subscriptable"
           ]
         }
       ]
