แก้ Hw4 เรียบร้อย

--- a/Basic_Programming_Concepts.ipynb
+++ b/Basic_Programming_Concepts.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Basic Programming Concepts.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM7Xa0VCVXQYBpRG+R346Y0",
+      "authorship_tag": "ABX9TyPR2IwOQatDlU0DtBTcG9L+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,7 +73,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Th7zHYXCD9jW",
-        "outputId": "f9382da5-777f-4b8f-a51a-6bfbad754a43"
+        "outputId": "f8c2ec74-3f17-4591-a9d8-4ad119d6f472"
       },
       "execution_count": 1,
       "outputs": [
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_2iWDs43Gbrm",
-        "outputId": "b8a457fe-e119-468c-da78-91dd4becce0a"
+        "outputId": "c999b70e-280c-487e-a454-7e40755c9c8e"
       },
       "execution_count": 2,
       "outputs": [
@@ -183,7 +183,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dBZW_LITI7NC",
-        "outputId": "b9201351-0fc1-408b-a6fe-5452fce03846"
+        "outputId": "65b24ecb-8161-446d-af8d-790c8a6de92f"
       },
       "execution_count": 5,
       "outputs": [
@@ -261,7 +261,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gi9DPS5rKb5L",
-        "outputId": "54db40d5-82da-40fe-b5e9-44dc837af10e"
+        "outputId": "70fc469f-3bbf-4f1d-ad67-de3ac0f852b9"
       },
       "execution_count": 7,
       "outputs": [
@@ -284,7 +284,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yFnJ7qF5Ov4u",
-        "outputId": "48c2f8d7-448b-4317-8489-da8c6058e6ed"
+        "outputId": "7d0bc47b-d0f0-41f3-aad6-aa5c3a9f2315"
       },
       "execution_count": 8,
       "outputs": [
@@ -330,7 +330,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qDgqwmaMPT4O",
-        "outputId": "c570a209-9a2d-4f4d-d728-4494f407faab"
+        "outputId": "a53d032c-cf82-4619-b44b-85576c1e81ea"
       },
       "execution_count": 10,
       "outputs": [
@@ -355,7 +355,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lQEJDlAkPgjW",
-        "outputId": "58ec7d2a-0f0b-458f-e985-78a2a7aee3c7"
+        "outputId": "1227a388-71ce-466c-e48a-d0a69b6ea2e6"
       },
       "execution_count": 11,
       "outputs": [
@@ -378,7 +378,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AMvM1QycPpb3",
-        "outputId": "592ecdd1-982d-4b3c-8ed5-5931723b3ac5"
+        "outputId": "b5fccae9-6d9d-437a-9395-f137952f0ebb"
       },
       "execution_count": 12,
       "outputs": [
@@ -401,7 +401,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E_mGC6iAQBPF",
-        "outputId": "0d79e274-7f4e-4126-ad5c-c19dadc1e013"
+        "outputId": "5d10e1b6-d685-4da7-dcbc-129ed0ddc7f4"
       },
       "execution_count": 13,
       "outputs": [
@@ -455,7 +455,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JlcXZyMvRVQs",
-        "outputId": "78ddeb37-7c5e-44fa-d5c7-cf1f02a4f697"
+        "outputId": "27b86913-7c58-4498-a2cc-aadddfc3f075"
       },
       "execution_count": 15,
       "outputs": [
@@ -479,7 +479,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mhpcGajzRrqT",
-        "outputId": "cb3a64e1-9fc8-4084-dcde-5cef20a43b7c"
+        "outputId": "06452f0e-7fa6-4937-dc35-d4a90466b653"
       },
       "execution_count": 16,
       "outputs": [
@@ -503,7 +503,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u3QHMqUaRw3U",
-        "outputId": "7a63974d-9690-4e5b-97e1-d9bd065484dd"
+        "outputId": "f012069e-15da-439a-ac41-f3872b4d4a25"
       },
       "execution_count": 17,
       "outputs": [
@@ -549,7 +549,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xH-ukr_xS8Wb",
-        "outputId": "e2e4a772-43b5-497e-e1a9-2dc7fd3df8f3"
+        "outputId": "79314904-b0d6-44bd-ea6b-5a9dd5b85b4d"
       },
       "execution_count": 18,
       "outputs": [
@@ -591,7 +591,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SvOzwJ50U0jp",
-        "outputId": "5a142ba7-6298-4ab4-b027-b6320277a0b8"
+        "outputId": "33ae2f72-a144-4899-adc6-01a843e8c10c"
       },
       "execution_count": 20,
       "outputs": [
@@ -636,7 +636,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "frwIvl8sXBRL",
-        "outputId": "b73ca8cb-0c84-4d67-e83a-0e79392da89f"
+        "outputId": "da146d51-f44c-49a3-c481-5aaaa745e3f4"
       },
       "execution_count": 22,
       "outputs": [
@@ -693,7 +693,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gHkcvlshZJ0U",
-        "outputId": "4add399e-df3d-417c-ff28-c2b6ad90d740"
+        "outputId": "b0cb2273-009a-469d-a6ff-b89f70710f6e"
       },
       "execution_count": 24,
       "outputs": [
@@ -729,7 +729,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OZ92-8PGbM46",
-        "outputId": "a7168fd0-ed5b-4884-d770-262c41779ed0"
+        "outputId": "bb5c12fd-fcd4-4342-a30a-7fb002456ef1"
       },
       "execution_count": 25,
       "outputs": [
@@ -765,7 +765,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AQS5FEPScNam",
-        "outputId": "a0300ebf-8e83-4b06-ad02-0c86da821312"
+        "outputId": "aa087bf8-61a3-4d0a-cd0b-358e6448614b"
       },
       "execution_count": 26,
       "outputs": [
@@ -851,7 +851,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lsZrgjw0gd0t",
-        "outputId": "30afc659-26c8-46cd-902c-b8975227206b"
+        "outputId": "eaf5f645-e427-4880-fe5d-59463eb2c2e5"
       },
       "execution_count": 28,
       "outputs": [
@@ -899,7 +899,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a00e6a91-a653-49f9-e0eb-9cfe8723db3d"
+        "outputId": "c353cae3-7f42-4466-a6df-35078b9ad096"
       },
       "outputs": [
         {
@@ -942,7 +942,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HuRxfUoxjyix",
-        "outputId": "743f7f2f-b09f-4639-e898-a5348a90912f"
+        "outputId": "e59fe4c2-1927-4f0a-8c8a-ccb85eff8779"
       },
       "execution_count": 30,
       "outputs": [
@@ -966,7 +966,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HEeh-q0qkNBK",
-        "outputId": "f12bad32-9a44-408f-c86c-5b9513e9bed0"
+        "outputId": "6e1b97d2-0d63-4cb5-c40c-9f8ad863cea6"
       },
       "execution_count": 31,
       "outputs": [
@@ -1002,7 +1002,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IYAVLdM7kjEx",
-        "outputId": "19e22b98-a212-43e6-87fb-dbab525e8b8a"
+        "outputId": "66abeab7-d9fd-4f75-950a-ff771305b106"
       },
       "execution_count": 33,
       "outputs": [
@@ -1038,7 +1038,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9JCbY_xMk9uh",
-        "outputId": "1434bc00-4797-4a59-c17f-99daff3a8373"
+        "outputId": "c16c6e07-db21-48d9-d178-0e2216a9738e"
       },
       "execution_count": 35,
       "outputs": [
@@ -1117,7 +1117,7 @@
       ],
       "metadata": {
         "id": "kUFO_CXWcem8",
-        "outputId": "21bdcc83-d7e0-4b97-8880-cfeda492b061",
+        "outputId": "6863c634-83ea-47b5-c1f6-b986d19205e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1168,7 +1168,7 @@
       ],
       "metadata": {
         "id": "4qCgs2QB_vxD",
-        "outputId": "79d4c608-11af-4a89-d335-d82b624f2b98",
+        "outputId": "3765015c-89a9-417f-d47f-0cb2bc008e64",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1194,7 +1194,7 @@
       ],
       "metadata": {
         "id": "H46lqlDRAE7R",
-        "outputId": "2161f425-73c1-40f9-d532-f2b745c771f1",
+        "outputId": "0a20c00e-6aae-48f1-9c8e-fc8dd48b3cd2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1216,16 +1216,126 @@
     {
       "cell_type": "code",
       "source": [
-        "def grading(X):   #function\n",
-        "    if X is int():  #ถ้าเป็น int จะทำ\n",
-        "\n",
-        "    \n"
+        "def grading(x):  #function\n",
+        "    if type(x) is int: #ถ้าเป็น int จะทำ \n",
+        "        if x < 0:\n",
+        "            y =f'คะแนน {x} ไม่สามารถตัดเกรดได้'\n",
+        "        elif x < 50:\n",
+        "            y = f'คะแนน {x} ได้เกรด F'\n",
+        "        elif x < 55:\n",
+        "            y = f'คะแนน {x} ได้เกรด D'\n",
+        "        elif x < 60:\n",
+        "            y = f'คะแนน {x} ได้เกรด D+'\n",
+        "        elif x < 65:\n",
+        "            y = f'คะแนน {x} ได้เกรด C'\n",
+        "        elif x < 70:\n",
+        "            y = f'คะแนน {x} ได้เกรด C+'\n",
+        "        elif x < 75:\n",
+        "            y = f'คะแนน {x} ได้เกรด B'\n",
+        "        elif x < 80:\n",
+        "            y = f'คะแนน {x} ได้เกรด B+'\n",
+        "        elif x <= 100:\n",
+        "            y = f'คะแนน {x} ได้เกรด A'\n",
+        "        else:\n",
+        "            y =f'คะแนน {x} ไม่สามารถตัดเกรดได้'\n",
+        "    else:\n",
+        "        y =f'คะแนน {x} ไม่สามารถตัดเกรดได้'\n",
+        "    \n",
+        "    return y"
       ],
       "metadata": {
-        "id": "D3kIbLCz_dy2"
+        "id": "NlkxvQbD_cSO"
       },
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(1) is int"
+      ],
+      "metadata": {
+        "id": "dx_p-DkvCcnL",
+        "outputId": "be8bfa28-6232-4791-a3a8-dfc7d9b597eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "grading(1)"
+      ],
+      "metadata": {
+        "id": "1Mj4zb4LCSB6",
+        "outputId": "b1caa1f9-6f5b-4b92-ae59-dd47d4f2b8b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'คะแนน 1 ได้เกรด F'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in input:\n",
+        "    print(grading(i))"
+      ],
+      "metadata": {
+        "id": "p_cE3Je8Bueg",
+        "outputId": "f516fd4c-0a1e-4db1-acc7-05154059a197",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "คะแนน 1 ได้เกรด F\n",
+            "คะแนน 50 ได้เกรด D\n",
+            "คะแนน 65 ได้เกรด C+\n",
+            "คะแนน 90 ได้เกรด A\n",
+            "คะแนน 101 ไม่สามารถตัดเกรดได้\n",
+            "คะแนน -5 ไม่สามารถตัดเกรดได้\n",
+            "คะแนน 49 ได้เกรด F\n",
+            "คะแนน ก ไม่สามารถตัดเกรดได้\n",
+            "คะแนน 80 ได้เกรด A\n"
+          ]
+        }
+      ]
     }
   ]
 }
